# claudebot-discord

./: .gitignore  CLAUDE.md  README.md  WISHLIST.md  bot.py  codex_bot.py  council.py  eval_runner.py  install_task.py  kill_all.py  kill_bots.ps1  kimi_bot.py  main.py  pyproject.toml  refactor_plan.md  requirements.txt  run.py  suno.py  test_interrupt_latency.py  user_memories.md
.claude/: settings.local.json
claude/: actions.py  attachments.py  bot.py  bridge.py  contexts.py  image_gen.py  memories.py  project_seed.py  prompts.py  reminders.py  research.py  system_stats.py
codex/: actions.py  bot.py  bridge.py  prompts.py
data/prompts/: claude_system.md  claude_system.md.bak  claude_thread.md  claude_thread.md.bak  codex_system.md  kimi_system.md  soul_calibration.md
integrations/: council_prompt.py  midjourney.py  suno.py
integrations/voice/: __init__.py  audio.py  llm.py  (+5 more)
kimi/: actions.py  bot.py  bridge.py  prompts.py
plugins/: __init__.py  _legacy.py
scripts/: check_locks.py  check_procs.py  check_tasks.py  clean_restart.py  detailed_check.py  fix_scheduled_task.py  full_check.py  install_task.py  kill_all.py  nuke_and_restart.py  restart.ps1  restart_bot.py  setup_scheduled_task.py  test_mutex.py  test_supervisor_dup.py
selfbot/: self.py
shared/: attachments.py  bot_actions.py  config.py  discord_utils.py  hotreload.py  lockfile.py  logging_setup.py  plugin.py  plugin_loader.py  state.py  usage.py  watchdog.py
supervisor/: forensics.py  health.py  process.py  supervisor.py
tests/: test_bridge.py  test_cc_latency.py  test_latency_comparison.py
(+12 files in other folders)
